...
        android:theme="@style/BottomBarTheme"
        app:fabCradleMargin="0dp"
        app:fabCradleRoundedCornerRadius="0dp"
        app:fabAlignmentMode="end"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bvNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:rippleColor="@color/colorPrimaryDark"
        app:backgroundTint="@color/colorPrimarySoft"
        app:fabSize="normal"
        android:elevation="4dp"
...
